--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <div class="container">
                     <div class="left">
                         <div class="big-title">
-                            <h1>Hey, I'm Lutfi 🙈</h1>
+                            <h1>Hey, I'm Lutfi ⚡️</h1>
                             <h4>Student of Electrical Engineer with zero experience based in Surabaya, Indonesia</h1>
                         </div>
                         <p class="text">
