--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <div class="left">
                         <div class="big-title">
                             <h1>Hey, I'm Lutfi ⚡️</h1>
-                            <h4>Full time Linux user based in Surabaya, Indonesia</h1>
+                            <h4>Electrical Engineer and Full time Linux user based in Surabaya, Indonesia</h1>
                         </div>
                         <p class="text">
                             
