--- a/index.html
+++ b/index.html
@@ -27,8 +27,7 @@
                 <div class="hero">
                     <h1 class="title">Hey, I'm Lutfi ⚡</h1>
                     <h2 class="subtitle">
-                        Electrical Engineer and Full Time Linux User based in <br />
-                        Surabaya, Indonesia
+                        The man from the north to the south.
                     </h2>
                 </div>
                 <div class="preview">
